[feat] news retrieve complete
