# src/controllers/news/news.service.ts
@@ -8,25 +8,30 @@ export const newsService = {
     profile_repository: profileRepository,
     reads_repository: readerRepository,
 
-    async getTopNewsByCategory(category: Category, page: number = 1) {
+    async getTopNews(page: number = 1, category?: Category, age?: Age) {
         const limit = 10;
         const mostReadOffset = (page - 1) * limit;
         const remainingOffset = (page - 1) * limit;
 
+        const today = new Date();
+        today.setHours(0, 0, 0, 0);
+
         const mostReadNewsIds = await this.reads_repository.mostReadNews(
-            category,
             mostReadOffset,
-            limit
+            limit,
+            category,
+            age,
+            today
         );
         const mostReadNews = await this.repository.mostReadNews(
             mostReadNewsIds
         );
         if (mostReadNewsIds.length < 10) {
             const remainingNews = await this.repository.remainingNews(
-                category,
                 mostReadNewsIds,
                 remainingOffset,
-                limit - mostReadNews.length
+                limit - mostReadNews.length,
+                category
             );
 
             return mostReadNews.concat(remainingNews!);
